fix: stop uploads being stretched

--- a/src/styles/uploads.scss
+++ b/src/styles/uploads.scss
@@ -16,7 +16,6 @@
         img {
             display: inline-block;
             vertical-align: middle;
-            min-width: 30vw;
             max-height: 250px;
             max-width: 90%;
 
